# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  08 Jul 2006; Mike Auty <ikelos@gentoo.ogr>:
  Re-arranged the vmware-mod.eclass.  It looks like it should be able to handle 
  the various modules for the vmware-*-tools.  The problem is that since we don't
  have a nice vmware-any-any package for the tool modules, we can't just use an
  environment variable and a single source package.  So how do we go about
  unpacking it from the provided tarball, if the main package is built elsewhere?
  Do we require the file for both programs?  Do we augment the vmware-tools-modules
  to require the install file, and if so, how do we know which version we installed?
  Ideas on a postcard to...  5:)
  
  08 Jul 2006; Mike Auty <ikelos@gentoo.org>:
  First attempt at a vmware-server-tools package, based on a user submitted ebuild
  (thanks to Anthony Red in bug 122670) and the vmware-workstation-tools ebuild.
  There are likely to be a lot of changes to it, whilst I work out what it does,
  during that time I'd suggest NOT using it...  5:)

  02 Jul 2006; Mike Auty <ikelos@gentoo.org>:
  Fixed a mistake in the vmware-mod.eclass, where I'd left out the EPATCH_SUFFIX.
  It didn't show itself because I was always building the modules for the running
  kernel.  And that why you have other people bugtest for you...  5:)
  
  29 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Added the required files for the vmware-overlay to work as a Paludis
  overlay.  Make note: new files are one thing, deviations that will break
  the ebuild with portage are another...  5:)
  
  27 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Changed the vmware-server ebuild to make use of ${config_dir}.
  It should also now start applying the amd64 pam.d patch correctly again.
  
  27 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Finally remove the old vmware-modules-101 ebuild, since it's not