@@ -52,6 +52,7 @@ RMD160 0d7e9ed13ebb3c73dd847e95fa95499296609e8c files/vmware.xml 1592
 SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d files/vmware.xml 1592
 DIST VMware-server-1.0.0-24927.tar.gz 104500783 RMD160 e8332b37022178b3d656b43f10d5cc46a6bcc068 SHA1 76b322e9c4cb18c8db1ed0f53f3646e35590f611 SHA256 4e3d447b671e7008af5f7e42df6cd2200c11f0ab85baee275418c80207e97707
 DIST VMware-server-1.0.0-27828.tar.gz 105302235 RMD160 b9da9ee3a46f0eed0a28a362adedea66c34ebf46 SHA1 5e13a8c56e182dee70f7c608acab3f5a91cfdaac SHA256 d1388a75e313c67e44fdfae242cd3cf54486bba7f03ef2239b9c0605437dc56b
+DIST VMware-server-1.0.0-28343.tar.gz 105298140 RMD160 ac3ba270717a18216c405d967f8535803ca68e3d SHA1 fc47b02b7bbb9fa793cc67f7b7a906448994a155 SHA256 c6583d04c083d54bdf74bc94705e0603c5d918df9756918d2053438d49c5641a
 DIST vmware-any-any-update101.tar.gz 296409 RMD160 d8994b91492257d8b8e08480ab27fc307fc34095 SHA1 43714052429c1574cdf086a052859657affff0b0 SHA256 b12e3a70117ef26a85c8e01a23ea7d21b62bbc86998368114f9f7932390d2037
 DIST vmware-server-1.0.0.24927-rpath-corrected-libs.tar.bz2 73834 RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 SHA1 9d696750ca3ec92b31ca8112fd80dcd832494044 SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b
 DIST vmware-server-perl-fixed-rpath-libs.tar.bz2 73834 RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 SHA1 9d696750ca3ec92b31ca8112fd80dcd832494044 SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b
@@ -63,9 +64,16 @@ EBUILD vmware-server-1.0.0.27828.ebuild 3013 RMD160 ce782286ff71053a59235bf6d3f5
 MD5 2fec5d30dd797231e1a2132fe0eccda3 vmware-server-1.0.0.27828.ebuild 3013
 RMD160 ce782286ff71053a59235bf6d3f5061531c83653 vmware-server-1.0.0.27828.ebuild 3013
 SHA256 df30f636859915118c650ff2f31f9c4eb0a069f2eef6569679b83d2f31f6273c vmware-server-1.0.0.27828.ebuild 3013
+EBUILD vmware-server-1.0.0.28343.ebuild 3013 RMD160 ce782286ff71053a59235bf6d3f5061531c83653 SHA1 d5ac3f79fd1e3c888fa55aff81c55f697b3f436f SHA256 df30f636859915118c650ff2f31f9c4eb0a069f2eef6569679b83d2f31f6273c
+MD5 2fec5d30dd797231e1a2132fe0eccda3 vmware-server-1.0.0.28343.ebuild 3013
+RMD160 ce782286ff71053a59235bf6d3f5061531c83653 vmware-server-1.0.0.28343.ebuild 3013
+SHA256 df30f636859915118c650ff2f31f9c4eb0a069f2eef6569679b83d2f31f6273c vmware-server-1.0.0.28343.ebuild 3013
 MD5 eab3637581f2e314685d9dff4b6a41d8 files/digest-vmware-server-1.0.0.24927-r1 900
 RMD160 61d923558bf2911ae89b3abe85525e0196ec2402 files/digest-vmware-server-1.0.0.24927-r1 900
 SHA256 979e02f00261bcf9f11026508ffa28cd9eef88de44c5ba4a60441abd10892eba files/digest-vmware-server-1.0.0.24927-r1 900
 MD5 b631f04c1b974051fe3acd012407c0d6 files/digest-vmware-server-1.0.0.27828 867
 RMD160 2d7c94b6fffefe944a4c25f9a7d6d75f15872acf files/digest-vmware-server-1.0.0.27828 867
 SHA256 14a4c8855081b2ee9c7624f3258e80b07b56e54a6ba44335abfa696341f9d920 files/digest-vmware-server-1.0.0.27828 867
+MD5 129643c6ef64aee21278919687c7335b files/digest-vmware-server-1.0.0.28343 867
+RMD160 60bca6128011c9850051e698367be96afab6a8a9 files/digest-vmware-server-1.0.0.28343 867
+SHA256 238b459a2b88a29da621f150897d16f21f274be311f242e442ba39f6b516f772 files/digest-vmware-server-1.0.0.28343 867
