@@ -1,0 +1,9 @@
+MD5 a25b4beb53785c05ef3b3077d87f6e2b VMware-server-1.0.0-28343.tar.gz 105298140
+RMD160 ac3ba270717a18216c405d967f8535803ca68e3d VMware-server-1.0.0-28343.tar.gz 105298140
+SHA256 c6583d04c083d54bdf74bc94705e0603c5d918df9756918d2053438d49c5641a VMware-server-1.0.0-28343.tar.gz 105298140
+MD5 b3ce457f5b9ae8b606fd70f56084877d vmware-any-any-update101.tar.gz 296409
+RMD160 d8994b91492257d8b8e08480ab27fc307fc34095 vmware-any-any-update101.tar.gz 296409
+SHA256 b12e3a70117ef26a85c8e01a23ea7d21b62bbc86998368114f9f7932390d2037 vmware-any-any-update101.tar.gz 296409
+MD5 e494568dd025080cc80e7ad801f0b743 vmware-server-perl-fixed-rpath-libs.tar.bz2 73834
+RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 vmware-server-perl-fixed-rpath-libs.tar.bz2 73834
+SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b vmware-server-perl-fixed-rpath-libs.tar.bz2 73834
